package subject;

public enum OrderState {
    PENDING, PAID, DELIVERED, CANCELLED
}
